--- a/eureka-service.properties
+++ b/eureka-service.properties
@@ -1,3 +1,4 @@
 server.port=8001
 eureka.client.register-with-eureka=false
-#eureka.client.service-url.defaultZone=http://localhost:1111/eureka
+eureka.client.fetch-registry=false
+eureka.client.enabled=false
