--- a/dummy-client.properties
+++ b/dummy-client.properties
@@ -1,3 +1,3 @@
 server.port=8886
-spring.cloud.stream.bindings.output=dummyones
+spring.cloud.stream.bindings.output.destination=dummyones
 zuul.ribbon-isolation-strategy=semaphore
