--- a/dummy-client.properties
+++ b/dummy-client.properties
@@ -1,3 +1,4 @@
 server.port=8886
 spring.cloud.stream.bindings.output.destination=dummyones
 zuul.ribbon-isolation-strategy=semaphore
+spring.zipkin.base-url=http://localhost:8886
