--- a/dummy-client.properties
+++ b/dummy-client.properties
@@ -3,3 +3,4 @@ spring.cloud.stream.bindings.output.destination=dummyones
 zuul.ribbon-isolation-strategy=semaphore
 spring.zipkin.base-url=http://localhost:8886
 security.oauth2.resource.user-info-uri=http://localhost:8080/user
+security.oauth2.resource.preferTokenInfo: false
