--- a/discovery-service.properties
+++ b/discovery-service.properties
@@ -2,4 +2,5 @@ server.port=8761
 eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+eureka.server.enable-self-preservation=false
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
