--- a/discovery-service.properties
+++ b/discovery-service.properties
@@ -1,5 +1,6 @@
 server.port=8761
 eureka.instance.hostname=localhost
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+eureka.server.renewal-percent-threshold=0.49
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
