--- a/pasha-service.properties
+++ b/pasha-service.properties
@@ -1,2 +1,4 @@
 server.port=8081
 message=Privet s Urala!!!
+spring.cloud.stream.bindings.input.destination=oldUrals
+spring.cloud.stream.bindings.input.group=oldUrals-group
