--- a/pasha-service.properties
+++ b/pasha-service.properties
@@ -2,3 +2,4 @@ server.port=8081
 message=Privet s Urala!!!
 spring.cloud.stream.bindings.input.destination=oldUrals
 spring.cloud.stream.bindings.input.group=oldUrals-group
+spring.cloud.stream.bindings.input.durableSuscription=true
