--- a/dasha-service.properties
+++ b/dasha-service.properties
@@ -1,2 +1,3 @@
 server.port=8084
 spring.cloud.stream.bindings.output.destination=oldUrals
+spring.cloud.stream.bindings.output.content-type=application/json
