--- a/pasha-service.properties
+++ b/pasha-service.properties
@@ -3,3 +3,4 @@ message=Privet s Urala!!!
 spring.cloud.stream.bindings.input.destination=oldUrals
 spring.cloud.stream.bindings.input.group=oldUrals-group
 spring.cloud.stream.bindings.input.durableSuscription=true
+spring.cloud.stream.bindings.input.content-type: application/x-java-object;type=ru.atc.OldUral
