--- a/dasha-service.properties
+++ b/dasha-service.properties
@@ -1,3 +1,4 @@
 server.port=8084
 spring.cloud.stream.bindings.output.destination=oldUrals
 spring.cloud.stream.bindings.output.content-type=application/json
+spring.zipkin.base-url=http://localhost:8886
