--- a/pasha-service.properties
+++ b/pasha-service.properties
@@ -3,4 +3,5 @@ message=Privet s Urala!!!
 spring.cloud.stream.bindings.input.destination=oldUrals
 spring.cloud.stream.bindings.input.group=oldUrals-group
 spring.cloud.stream.bindings.input.durableSubscription=true
-spring.cloud.stream.bindings.input.content-type: application/x-java-object;type=ru.atc.OldUral
+spring.cloud.stream.bindings.input.content-type=application/x-java-object;type=ru.atc.OldUral
+spring.zipkin.base-url=http://localhost:8989
