--- a/proxy-service.properties
+++ b/proxy-service.properties
@@ -1,2 +1,9 @@
 server.port=9999
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 60000
+spring.oauth2.client.client-id=acme
+spring.oauth2.client.client-secret=acmesecret
+spring.oauth2.client.access-token-uri=http://localhost:9090/uaa/ouath/token
+spring.oauth2.client.user-authorization-uri=http://localhost:9090/uaa/ouath/authorize
+spring.oauth2.client.client-authentication-scheme: header
+security.oauth2.resource.user-info-uri=http://localhost:9090/uaa/user
+security.oauth2.resource.prefer-token-info=false
