--- a/proxy-service.properties
+++ b/proxy-service.properties
@@ -4,6 +4,6 @@ spring.oauth2.client.client-id=acme
 spring.oauth2.client.client-secret=acmesecret
 spring.oauth2.client.access-token-uri=http://localhost:9090/uaa/ouath/token
 spring.oauth2.client.user-authorization-uri=http://localhost:9090/uaa/ouath/authorize
-spring.oauth2.client.client-authentication-scheme: header
+spring.oauth2.client.client-authentication-scheme=header
 security.oauth2.resource.user-info-uri=http://localhost:9090/uaa/user
 security.oauth2.resource.prefer-token-info=false
