--- a/proxy-service.properties
+++ b/proxy-service.properties
@@ -7,7 +7,7 @@ server.port=9999
 #spring.oauth2.client.client-authentication-scheme=header
 #security.oauth2.resource.user-info-uri=http://localhost:9090/uaa/user
 #security.oauth2.resource.prefer-token-info=false
-zuul.ignored-services=*
-zuul.routes.auth-service.path=/uaa/**
-zuul.routes.auth-service.service-id=auth-service
-zuul.routes.auth-service.strip-prefix=false
+#zuul.ignored-services=*
+#zuul.routes.auth-service.path=/uaa/**
+#zuul.routes.auth-service.service-id=auth-service
+#zuul.routes.auth-service.strip-prefix=false
