--- a/proxy-service.properties
+++ b/proxy-service.properties
@@ -8,6 +8,6 @@ server.port=9999
 #security.oauth2.resource.user-info-uri=http://localhost:9090/uaa/user
 #security.oauth2.resource.prefer-token-info=false
 #zuul.ignored-services=*
-#zuul.routes.auth-service.path=/uaa/**
-#zuul.routes.auth-service.service-id=auth-service
-#zuul.routes.auth-service.strip-prefix=false
+zuul.routes.pasha-service.path=/pasha-service/**
+zuul.routes.pasha-service.service-id=pasha-service
+zuul.routes.pasha-service.strip-prefix=false
