--- a/proxy-service.properties
+++ b/proxy-service.properties
@@ -11,3 +11,6 @@ server.port=9999
 zuul.routes.pasha-service.path=/pasha-service/**
 zuul.routes.pasha-service.service-id=pasha-service
 zuul.routes.pasha-service.strip-prefix=false
+zuul.routes.auth-service.path=/auth-service/**
+zuul.routes.auth-service.service-id=auth-service
+zuul.routes.auth-service.strip-prefix=false
