--- a/pasha-service.properties
+++ b/pasha-service.properties
@@ -5,3 +5,8 @@ spring.cloud.stream.bindings.input.group=oldUrals-group
 spring.cloud.stream.bindings.input.durableSubscription=true
 spring.cloud.stream.bindings.input.content-type=application/x-java-object;type=ru.atc.OldUral
 spring.zipkin.base-url=http://localhost:8989
+management.security.enabled=false
+eureka.client.register-with-eureka=true
+management.context-path=/management
+security.oauth2.resource.user-info-uri=http://localhost:9090/uaa/user
+security.oauth2.resource.prefer-token-info=false
