--- a/pasha-service.properties
+++ b/pasha-service.properties
@@ -1,5 +1,5 @@
 server.port=8081
-message=Privet s Urala!!!
+message=Privet s Urala!!!!!!!! :D
 spring.cloud.stream.bindings.input.destination=oldUrals
 spring.cloud.stream.bindings.input.group=oldUrals-group
 spring.cloud.stream.bindings.input.durableSubscription=true
