--- a/proxy-service.properties
+++ b/proxy-service.properties
@@ -1,5 +1,5 @@
 server.port=9999
-#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 #spring.oauth2.client.client-id=acme
 #spring.oauth2.client.client-secret=acmesecret
 #spring.oauth2.client.access-token-uri=http://localhost:9090/uaa/ouath/token
