--- a/pasha-service.properties
+++ b/pasha-service.properties
@@ -8,5 +8,5 @@ spring.zipkin.base-url=http://localhost:8989
 management.security.enabled=false
 eureka.client.register-with-eureka=true
 management.context-path=/management
-security.oauth2.resource.user-info-uri=http://localhost:9090/uaa/user
-security.oauth2.resource.prefer-token-info=false
+#security.oauth2.resource.user-info-uri=http://localhost:9090/uaa/user
+#security.oauth2.resource.prefer-token-info=false
